[gd_scene load_steps=31 format=3 uid="uid://c4e5o2j6nkkkn"]

[ext_resource type="Script" uid="uid://c5c42qdomv36y" path="res://scenes/ui.gd" id="1_hy13r"]
[ext_resource type="Texture2D" uid="uid://fi07qup1wacg" path="res://assets/sprites/icons/coin.png" id="2_rauqo"]
[ext_resource type="AudioStream" uid="uid://dy6dnip7c1qfr" path="res://assets/sfx/coins.wav" id="3_r0co5"]
[ext_resource type="PackedScene" uid="uid://b4l7gkq0ibacm" path="res://ui/fisherman_profile.tscn" id="5_os0ka"]
[ext_resource type="PackedScene" uid="uid://cbxq6hn0dd75u" path="res://scenes/scrim.tscn" id="6_squ3x"]
[ext_resource type="FontFile" uid="uid://clsxpqfmryyob" path="res://assets/fonts/upheaval/upheavtt.ttf" id="9_tdxgr"]
[ext_resource type="PackedScene" uid="uid://chhnrx8jp3syn" path="res://ui/ability_button.tscn" id="10_diyc5"]
[ext_resource type="PackedScene" uid="uid://w87u21qrvcd4" path="res://scenes/results_scene.tscn" id="10_hrmpd"]
[ext_resource type="PackedScene" uid="uid://dsgecvueilt6e" path="res://ui/clock.tscn" id="10_xee24"]
[ext_resource type="Script" uid="uid://ccjuv7sn2xqo0" path="res://objects/ability.gd" id="11_ju45i"]
[ext_resource type="Texture2D" uid="uid://bup3dkrst1rih" path="res://assets/ui/option_icon.png" id="11_x7jpl"]
[ext_resource type="Texture2D" uid="uid://ejc2v3gtfytb" path="res://assets/sprites/fishermans/boat.png" id="12_74toj"]
[ext_resource type="PackedScene" uid="uid://cdmo1jhmbrias" path="res://ui/stamina_control.tscn" id="12_diyc5"]
[ext_resource type="PackedScene" uid="uid://b7o878bg7yltg" path="res://ui/card_selector.tscn" id="13_fklw0"]
[ext_resource type="PackedScene" uid="uid://ngwgmo67epe2" path="res://ui/options_scene.tscn" id="13_os0ka"]

[sub_resource type="LabelSettings" id="LabelSettings_3nawq"]
font = ExtResource("9_tdxgr")
font_size = 56
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_1f2ph"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gfs05"]
resource_name = "earn"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_inegl"]
_data = {
&"RESET": SubResource("Animation_1f2ph"),
&"earn": SubResource("Animation_gfs05")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7jpl"]
bg_color = Color(0.856068, 0.856067, 0.856068, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98, 0.922833, 0.49, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.105882)
shadow_size = 1
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_os0ka"]
bg_color = Color(0.947199, 0.947199, 0.947199, 1)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 6
border_color = Color(0.98, 0.922833, 0.49, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.105882)
shadow_size = 1
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diyc5"]
bg_color = Color(0.98, 0.865667, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 8.0

[sub_resource type="Resource" id="Resource_co7pv"]
script = ExtResource("11_ju45i")
name = "Pepito"
description = ""
texture = ExtResource("12_74toj")
type = 1
level_requirement = 0
modifier = 5.0
cooldown = 5.0
metadata/_custom_type_script = "uid://ccjuv7sn2xqo0"

[sub_resource type="Animation" id="Animation_db8l5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../OptionsPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AbilitiesButtons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FadeUI/FishermanProfile2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1thc4"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_diyc5"]
resource_name = "idle"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeUI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../OptionsPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AbilitiesButtons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_os0ka"]
resource_name = "options"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../OptionsPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hrmpd"]
resource_name = "results"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ResultsScene:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeUI/Clock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeUI/Options:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../OptionsPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AbilitiesButtons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FadeUI/FishermanProfile2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FadeUI:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hykrw"]
_data = {
&"RESET": SubResource("Animation_db8l5"),
&"fade_out": SubResource("Animation_1thc4"),
&"idle": SubResource("Animation_diyc5"),
&"options": SubResource("Animation_os0ka"),
&"results": SubResource("Animation_hrmpd")
}

[sub_resource type="LabelSettings" id="LabelSettings_x7jpl"]
font = ExtResource("9_tdxgr")
font_size = 48
font_color = Color(0, 1, 0, 1)

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("coins_label", "coin_anim", "anim", "fishes_catched", "scrimmer", "fps_label") groups=["ui"]]
script = ExtResource("1_hy13r")
coins_label = NodePath("MarginContainer/Main/FadeUI/Coins/HBoxContainer/Label")
coin_anim = NodePath("MarginContainer/Main/FadeUI/Coins/Anim")
anim = NodePath("MarginContainer/Main/Anim")
fishes_catched = NodePath("MarginContainer/Main/FadeUI/FishesCatched/Fishes")
scrimmer = NodePath("Scrim")
fps_label = NodePath("FPS")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Main" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="FadeUI" type="Control" parent="MarginContainer/Main"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Coins" type="Control" parent="MarginContainer/Main/FadeUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -312.0
offset_bottom = 40.0
grow_horizontal = 0
pivot_offset = Vector2(312, 28)
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Main/FadeUI/Coins"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/FadeUI/Coins/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_rauqo")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/Main/FadeUI/Coins/HBoxContainer"]
layout_mode = 2
text = "9"
label_settings = SubResource("LabelSettings_3nawq")
vertical_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="MarginContainer/Main/FadeUI/Coins"]
libraries = {
&"": SubResource("AnimationLibrary_inegl")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/Main/FadeUI/Coins"]
stream = ExtResource("3_r0co5")
bus = &"SFx"

[node name="FishermanProfile2" parent="MarginContainer/Main/FadeUI" instance=ExtResource("5_os0ka")]

[node name="FishesCatched" type="Control" parent="MarginContainer/Main/FadeUI"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -158.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Fishes" type="HBoxContainer" parent="MarginContainer/Main/FadeUI/FishesCatched"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="Clock" parent="MarginContainer/Main/FadeUI" instance=ExtResource("10_xee24")]
process_mode = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -64.0
offset_top = -15.0
offset_right = 64.0
offset_bottom = 49.0
grow_vertical = 1

[node name="Options" type="Button" parent="MarginContainer/Main/FadeUI"]
layout_mode = 1
offset_left = 3.0
offset_top = 152.0
offset_right = 61.0
offset_bottom = 208.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_x7jpl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x7jpl")
theme_override_styles/normal = SubResource("StyleBoxFlat_os0ka")
icon_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/Main/FadeUI/Options"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_diyc5")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/FadeUI/Options"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_x7jpl")
expand_mode = 1
stretch_mode = 5

[node name="AbilitiesButtons" type="Control" parent="MarginContainer/Main"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 296.0
grow_vertical = 0

[node name="Abilities" type="HBoxContainer" parent="MarginContainer/Main/AbilitiesButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Ability1" parent="MarginContainer/Main/AbilitiesButtons/Abilities" instance=ExtResource("10_diyc5")]
layout_mode = 2
ability_data = SubResource("Resource_co7pv")

[node name="ResultsScene" parent="MarginContainer/Main" instance=ExtResource("10_hrmpd")]
layout_mode = 1

[node name="Anim" type="AnimationPlayer" parent="MarginContainer/Main"]
libraries = {
&"": SubResource("AnimationLibrary_hykrw")
}

[node name="StaminaControl" parent="MarginContainer/Main" instance=ExtResource("12_diyc5")]
layout_mode = 1

[node name="Scrim" parent="." instance=ExtResource("6_squ3x")]
metadata/_edit_lock_ = true

[node name="OptionsPanel" parent="." instance=ExtResource("13_os0ka")]
visible = false

[node name="CardSelector" parent="." instance=ExtResource("13_fklw0")]
visible = false
selection_type = 1

[node name="FPS" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -216.0
offset_top = 76.0
offset_right = -4.0
offset_bottom = 128.0
grow_horizontal = 0
text = "FPS"
label_settings = SubResource("LabelSettings_x7jpl")
horizontal_alignment = 2

[connection signal="end_day" from="MarginContainer/Main/FadeUI/Clock" to="." method="_on_clock_end_day"]
[connection signal="button_down" from="MarginContainer/Main/FadeUI/Options" to="." method="_on_options_button_down"]
[connection signal="closed" from="OptionsPanel" to="." method="_on_options_panel_closed"]
